--- a/package.json
+++ b/package.json
@@ -19,8 +19,15 @@
   },
   "homepage": "https://github.com/agamenonjunior/CompraInteligente#readme",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "express-generator": "^4.16.1"
+    "express-generator": "^4.16.1",
+    "express-handlebars": "^8.0.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.12.0"
+  },
+  "devDependencies": {
+    "sequelize": "^6.37.5"
   }
 }
