--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.2",
     "express-generator": "^4.16.1",
     "express-handlebars": "^8.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0"
   },
